--- a/python/imageManip.ipynb
+++ b/python/imageManip.ipynb
@@ -57,6 +57,238 @@
     "# Example usage\n",
     "make_background_transparent(\"../public/Tyro.jpg\", \"../public/Tyro.png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e278af6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\"\"\"\n",
+    "    Fit a polynomial of degree m to the data points (x, f) using orthogonal polynomials.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    m: Degree of the polynomial\n",
+    "    x: List of x values\n",
+    "    f: List of function values at x\n",
+    "    \n",
+    "    Returns:\n",
+    "    Tuple containing coefficients of the fitted polynomial.\n",
+    "\"\"\"\n",
+    "def orthogonalPolynomialFit(m: int, x: list, f: list) -> np.ndarray:\n",
+    "    n = len(x) - 1\n",
+    "    u  = np.zeros((m + 1, n + 2))\n",
+    "    s = np.zeros(n + 1)\n",
+    "    g = np.zeros(n + 1)\n",
+    "    h = np.zeros(n + 1)\n",
+    "\n",
+    "    # Check and fix the order of the curve\n",
+    "    if m  > n:\n",
+    "        m = n\n",
+    "        print(\"The highest power is adjacent to:\", n)\n",
+    "\n",
+    "    # Set up the zeroth-order polynomial\n",
+    "    for i in range(n + 1):\n",
+    "        u[0][i] = 1\n",
+    "        stmp = u[0][i] * u[0][i]\n",
+    "        s[0] += stmp\n",
+    "        g[0] += x[i] * stmp\n",
+    "        u[0][n+1] += u[0][i] * f[i]\n",
+    "\n",
+    "    g[0] /= s[0]\n",
+    "    u[0][n + 1] /= s[0]\n",
+    "\n",
+    "    # Set up the first-order polynomial\n",
+    "    for i in range(n + 1):\n",
+    "        u[1][i] = (x[i] - g[0]) * u[0][i]\n",
+    "        stmp = u[1][i] * u[1][i]\n",
+    "        s[1] += stmp\n",
+    "        g[1] += x[i] * stmp\n",
+    "        h[1] += x[i] * u[0][i] * u[1][i]\n",
+    "        u[1][n + 1] += u[1][i] * f[i]\n",
+    "\n",
+    "    g[1] /= s[1]\n",
+    "    h[1] /= s[0]\n",
+    "    u[1][n + 1] /= s[1]\n",
+    "\n",
+    "    # Obtain the higher-order polynomials recursively\n",
+    "    if m >= 2:\n",
+    "        for i in range(1, m):\n",
+    "            for j in range(n + 1):\n",
+    "                u[i + 1][j] = (x[j] - g[i]) * u[i][j] - h[i] * u[i - 1][j]\n",
+    "                stmp = u[i + 1][j] * u[i + 1][j]\n",
+    "                s[i + 1] += stmp\n",
+    "                g[i + 1] += x[j] * stmp\n",
+    "                h[i + 1] += x[j] * u[i][j] * u[i + 1][j]\n",
+    "                u[i + 1][n + 1] += u[i + 1][j] * f[j]\n",
+    "\n",
+    "            g[i + 1] /= s[i + 1]\n",
+    "            h[i + 1] /= s[i]\n",
+    "            u[i + 1][n + 1] /= s[i + 1]\n",
+    "    \n",
+    "    return u\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "x = [1,2,3,4,5]\n",
+    "f = [1,8,27,64,125]\n",
+    "m = 2\n",
+    "\n",
+    "# Create the Vandermonde matrix for polynomial fitting\n",
+    "A = np.vander(x, m + 1)\n",
+    "\n",
+    "# Solve for coefficients using least squares\n",
+    "coeffs, residuals, rank, singular_values = np.linalg.lstsq(A, f, rcond=None)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcdb4bda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "def orthogonalPolynomialFit(m: int, x: list, f: list) -> np.ndarray:\\n\\tn = len(x) - 1\\n\\tu  = np.zeros((m + 1, n + 2))\\n\\ts = np.zeros(n + 1)\\n\\tg = np.zeros(n + 1)\\n\\th = np.zeros(n + 1)\\n\\n\\t# Check and fix the order of the curve\\n\\tif m  > n:\\n\\t\\tm = n\\n\\t\\tprint(\"The highest power is adjacent to:\", n)\\n\\n\\t# Set up the zeroth-order polynomial\\n\\tfor i in range(n + 1):\\n\\t\\tu[0][i] = 1\\n\\t\\tstmp = u[0][i] * u[0][i]\\n\\t\\ts[0] += stmp\\n\\t\\tg[0] += x[i] * stmp\\n\\t\\tu[0][n+1] += u[0][i] * f[i]\\n\\n\\tg[0] /= s[0]\\n\\tu[0][n + 1] /= s[0]\\n\\n\\t# Set up the first-order polynomial\\n\\tfor i in range(n + 1):\\n\\t\\tu[1][i] = (x[i] - g[0]) * u[0][i]\\n\\t\\tstmp = u[1][i] * u[1][i]\\n\\t\\ts[1] += stmp\\n\\t\\tg[1] += x[i] * stmp\\n\\t\\th[1] += x[i] * u[0][i] * u[1][i]\\n\\t\\tu[1][n + 1] += u[1][i] * f[i]\\n\\n\\tg[1] /= s[1]\\n\\th[1] /= s[0]\\n\\tu[1][n + 1] /= s[1]\\n\\n\\t# Obtain the higher-order polynomials recursively\\n\\tif m >= 2:\\n\\t\\tfor i in range(1, m):\\n\\t\\t\\tfor j in range(n + 1):\\n\\t\\t\\t\\tu[i + 1][j] = (x[j] - g[i]) * u[i][j] - h[i] * u[i - 1][j]\\n\\t\\t\\t\\tstmp = u[i + 1][j] * u[i + 1][j]\\n\\t\\t\\t\\ts[i + 1] += stmp\\n\\t\\t\\t\\tg[i + 1] += x[j] * stmp\\n\\t\\t\\t\\th[i + 1] += x[j] * u[i][j] * u[i + 1][j]\\n\\t\\t\\t\\tu[i + 1][n + 1] += u[i + 1][j] * f[j]\\n\\n\\t\\t\\tg[i + 1] /= s[i + 1]\\n\\t\\t\\th[i + 1] /= s[i]\\n\\t\\t\\tu[i + 1][n + 1] /= s[i + 1]\\n\\t\\n\\treturn u\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"\"\"def orthogonalPolynomialFit(m: int, x: list, f: list) -> np.ndarray:\n",
+    "    n = len(x) - 1\n",
+    "    u  = np.zeros((m + 1, n + 2))\n",
+    "    s = np.zeros(n + 1)\n",
+    "    g = np.zeros(n + 1)\n",
+    "    h = np.zeros(n + 1)\n",
+    "\n",
+    "    # Check and fix the order of the curve\n",
+    "    if m  > n:\n",
+    "        m = n\n",
+    "        print(\"The highest power is adjacent to:\", n)\n",
+    "\n",
+    "    # Set up the zeroth-order polynomial\n",
+    "    for i in range(n + 1):\n",
+    "        u[0][i] = 1\n",
+    "        stmp = u[0][i] * u[0][i]\n",
+    "        s[0] += stmp\n",
+    "        g[0] += x[i] * stmp\n",
+    "        u[0][n+1] += u[0][i] * f[i]\n",
+    "\n",
+    "    g[0] /= s[0]\n",
+    "    u[0][n + 1] /= s[0]\n",
+    "\n",
+    "    # Set up the first-order polynomial\n",
+    "    for i in range(n + 1):\n",
+    "        u[1][i] = (x[i] - g[0]) * u[0][i]\n",
+    "        stmp = u[1][i] * u[1][i]\n",
+    "        s[1] += stmp\n",
+    "        g[1] += x[i] * stmp\n",
+    "        h[1] += x[i] * u[0][i] * u[1][i]\n",
+    "        u[1][n + 1] += u[1][i] * f[i]\n",
+    "\n",
+    "    g[1] /= s[1]\n",
+    "    h[1] /= s[0]\n",
+    "    u[1][n + 1] /= s[1]\n",
+    "\n",
+    "    # Obtain the higher-order polynomials recursively\n",
+    "    if m >= 2:\n",
+    "        for i in range(1, m):\n",
+    "            for j in range(n + 1):\n",
+    "                u[i + 1][j] = (x[j] - g[i]) * u[i][j] - h[i] * u[i - 1][j]\n",
+    "                stmp = u[i + 1][j] * u[i + 1][j]\n",
+    "                s[i + 1] += stmp\n",
+    "                g[i + 1] += x[j] * stmp\n",
+    "                h[i + 1] += x[j] * u[i][j] * u[i + 1][j]\n",
+    "                u[i + 1][n + 1] += u[i + 1][j] * f[j]\n",
+    "\n",
+    "            g[i + 1] /= s[i + 1]\n",
+    "            h[i + 1] /= s[i]\n",
+    "            u[i + 1][n + 1] /= s[i + 1]\n",
+    "    \n",
+    "    return u\"\"\"\n",
+    "\n",
+    "def uglyPrint(s):\n",
+    "    result = s.replace(\"    \", \"\\\\t\").replace(\"\\n\", \"\\\\n\").replace('\"', '\\\\\"')\n",
+    "    print(result)\n",
+    "\n",
+    "uglyPrint(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "09c02e4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "def orthogonalPolynomialFit(m: int, x: list, f: list) -> np.ndarray:\n",
+      "    n = len(x) - 1\n",
+      "    u  = np.zeros((m + 1, n + 2))\n",
+      "    s = np.zeros(n + 1)\n",
+      "    g = np.zeros(n + 1)\n",
+      "    h = np.zeros(n + 1)\n",
+      "\n",
+      "    # Check and fix the order of the curve\n",
+      "    if m  > n:\n",
+      "        m = n\n",
+      "        print(\"The highest power is adjacent to:\", n)\n",
+      "\n",
+      "    # Set up the zeroth-order polynomial\n",
+      "    for i in range(n + 1):\n",
+      "        u[0][i] = 1\n",
+      "        stmp = u[0][i] * u[0][i]\n",
+      "        s[0] += stmp\n",
+      "        g[0] += x[i] * stmp\n",
+      "        u[0][n+1] += u[0][i] * f[i]\n",
+      "\n",
+      "    g[0] /= s[0]\n",
+      "    u[0][n + 1] /= s[0]\n",
+      "\n",
+      "    # Set up the first-order polynomial\n",
+      "    for i in range(n + 1):\n",
+      "        u[1][i] = (x[i] - g[0]) * u[0][i]\n",
+      "        stmp = u[1][i] * u[1][i]\n",
+      "        s[1] += stmp\n",
+      "        g[1] += x[i] * stmp\n",
+      "        h[1] += x[i] * u[0][i] * u[1][i]\n",
+      "        u[1][n + 1] += u[1][i] * f[i]\n",
+      "\n",
+      "    g[1] /= s[1]\n",
+      "    h[1] /= s[0]\n",
+      "    u[1][n + 1] /= s[1]\n",
+      "\n",
+      "    # Obtain the higher-order polynomials recursively\n",
+      "    if m >= 2:\n",
+      "        for i in range(1, m):\n",
+      "            for j in range(n + 1):\n",
+      "                u[i + 1][j] = (x[j] - g[i]) * u[i][j] - h[i] * u[i - 1][j]\n",
+      "                stmp = u[i + 1][j] * u[i + 1][j]\n",
+      "                s[i + 1] += stmp\n",
+      "                g[i + 1] += x[j] * stmp\n",
+      "                h[i + 1] += x[j] * u[i][j] * u[i + 1][j]\n",
+      "                u[i + 1][n + 1] += u[i + 1][j] * f[j]\n",
+      "\n",
+      "            g[i + 1] /= s[i + 1]\n",
+      "            h[i + 1] /= s[i]\n",
+      "            u[i + 1][n + 1] /= s[i + 1]\n",
+      "    \n",
+      "    return u\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{s}\")"
+   ]
   }
  ],
  "metadata": {
