numericalanalysis.ipynb, temple on resume, and structbioinfo

--- a/python/numericalAnalysis.ipynb
+++ b/python/numericalAnalysis.ipynb
@@ -31,7 +31,8 @@
     "#   approx: float; Interpolated value at x\n",
     "#\n",
     "\n",
-    "python = \"\"\"def linearInterpolation(x: float, xi: list, fi: list) -> float:\n",
+    "python = \"\"\"\n",
+    "def linearInterpolation(x: float, xi: list, fi: list) -> float:\n",
     "\n",
     "    # Validate the data\n",
     "    if len(xi) != len(fi):\n",
@@ -49,7 +50,37 @@
     "            return approx\n",
     "    \n",
     "    # If x is not in the range of xi, raise an error\n",
-    "    raise ValueError(\"x is out of bounds of the provided xi data\")\"\"\"\n",
+    "    raise ValueError(\"x is out of bounds of the provided xi data\")\n",
+    "\"\"\"\n",
+    "\n",
+    "typescript = \"\"\"\n",
+    "function linearInterpolation(x: number, xi: number[], fi: number[]): number {\n",
+    "  // Validate the data\n",
+    "  if (xi.length !== fi.length) {\n",
+    "    throw new Error(\"xi and fi must have the same length\");\n",
+    "  }\n",
+    "\n",
+    "  // Find where x falls between xi[i] and xi[i+1]\n",
+    "  for (let i = 0; i < xi.length - 1; i++) {\n",
+    "    if (xi[i] <= x && x <= xi[i + 1]) {\n",
+    "      // Linear interpolation formula\n",
+    "      const approx =\n",
+    "        fi[i] + ((fi[i + 1] - fi[i]) * (x - xi[i])) / (xi[i + 1] - xi[i]);\n",
+    "\n",
+    "      return approx;\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  // If x is not in the range of xi, raise an error\n",
+    "  throw new Error(\"x is out of bounds of the provided xi data\");\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "numpy = \"\"\"\n",
+    "import numpy as np\n",
+    "\n",
+    "np.interp([x], xi, fi)\n",
+    "\"\"\"\n",
     "\n",
     "\n",
     "# Example\n",
@@ -66,7 +97,8 @@
     "print(\"Approximation:  \\t\", approx)\n",
     "print(\"Actual value:   \\t\", actual)\n",
     "print(\"Actual Error:   \\t\", error)\n",
-    "print(\"Estimated Error:\\t\", est_error)"
+    "print(\"Estimated Error:\\t\", est_error)\n",
+    "\n"
    ]
   },
   {
@@ -111,7 +143,8 @@
     "    ft = fi.copy()\n",
     "    for i in range(n):\n",
     "        for j in range(n - i):\n",
-    "            ft[j] = (x - xi[j]) / (xi[i+j+1] - xi[j]) * ft[j+1] + (x - xi[i+j+1]) / (xi[j] - xi[i+j+1]) * ft[j + 1]\"\"\"\n",
+    "            ft[j] = (x - xi[j]) / (xi[i+j+1] - xi[j]) * ft[j+1] + (x - xi[i+j+1]) / (xi[j] - xi[i+j+1]) * ft[j + 1]\n",
+    "\"\"\"\n",
     "\n",
     "typescript = \"\"\"\n",
     "function aitkensMethod(x: number, xi: number[], fi: number[]): number {\n",
@@ -128,14 +161,12 @@
     "\n",
     "  return ft[0]; // Return the interpolated value\n",
     "}\n",
+    "\"\"\"\n",
     "\n",
-    "// Example\n",
-    "const xi = [1, 2, 3, 4];\n",
-    "const fi = [1, 4, 9, 16];\n",
-    "const x = 2.5;\n",
+    "numpy = \"\"\"\n",
+    "import scipy as sp\n",
     "\n",
-    "const result = aitkensMethod(x, xi, fi);\n",
-    "console.log(`Interpolated value at x = ${x}: ${result}`);\n",
+    "sp.lagrange(xi, fi)\n",
     "\"\"\""
    ]
   },
@@ -154,8 +185,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def UpAndDownMethod():\n",
-    "    pass  # Placeholder for Up and Down Method implementation"
+    "import numpy as np\n",
+    "\n",
+    "def UpAndDownMethod(x: float, xi: list, fi: list) -> float:\n",
+    "    n = len(xi) - 1\n",
+    "    dp = np.zeros((n + 1, n + 1))\n",
+    "    dm = np.zeros((n + 1, n + 1))\n",
+    "    \n",
+    "    # Assign the first columns of the corrections\n",
+    "    dp[0] = fi.copy()\n",
+    "    dm[0] = fi.copy()\n",
+    "\n",
+    "    # Find the closest point to x\n",
+    "    j0 = 0\n",
+    "    k0 = 0\n",
+    "    dx = x - xi[0]\n",
+    "    for j in range(1, n + 1):\n",
+    "        dx1 = x - xi[j]\n",
+    "        if abs(dx1) < abs(dx):\n",
+    "            dx = dx1\n",
+    "            j0 = j\n",
+    "\n",
+    "    k0 = j0\n",
+    "    \n",
+    "    return ft[0]\n",
+    "    "
    ]
   },
   {
